--- a/inventory/hosts/host.yaml
+++ b/inventory/hosts/host.yaml
@@ -1,3 +1,7 @@
 [appdynamics]
 host1 ansible_host=192.168.1.10
 host2 ansible_host=192.168.1.11
+
+[userdata]
+host1 ansible_host=192.168.1.10
+host2 ansible_host=192.168.1.11
