gather facts setting to false

--- a/playbooks/appd_install.yml
+++ b/playbooks/appd_install.yml
@@ -6,6 +6,8 @@
 - name: Install AppDynamics
   hosts: all
   become: yes
+  # Gather facts only if necessary
+  gather_facts: false
   roles:
     - appd
 
